--- a/inventory.yml
+++ b/inventory.yml
@@ -4,11 +4,15 @@
    generic_data:
     username: 'omera'
     password: 'arst0088'
-    device_type: 'cisco_xe'
+    device_type: 'cisco_ios'
     secret: ''
    devices:
     - name: 'device_1'
       ip_address: '192.168.3.101'
+      username: 'ahmedgaily'
+      password: 'arst0088'
+    - name: 'device_2'
+      ip_address: '192.168.3.100'
       username: 'ahmedgaily'
       password: 'arst0088'
 ...
